--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <br/>
 
     <button class="connect">Connect</button>
-    <button class="sendHello">Send Hello</button>
+    <button class="generateKeys">Generate keys</button>
   </body>
 
   <script>
@@ -35,10 +35,10 @@
     const snapId = `wallet_plugin_${origin}`
 
     const connectButton = document.querySelector('button.connect')
-    const sendButton = document.querySelector('button.sendHello')
+    const generateKeysButton = document.querySelector('button.generateKeys')
 
     connectButton.addEventListener('click', connect)
-    sendButton.addEventListener('click', send)
+    generateKeysButton.addEventListener('click', send)
 
     async function connect () {
       await ethereum.send({
@@ -54,9 +54,10 @@
         const response = await ethereum.send({
           method: snapId,
           params: [{
-            method: 'hello'
+            method: 'generateKeys'
           }]
         })
+        console.log(response)
       } catch (err) {
         console.error(err)
         alert('Problem happened: ' + err.message || err)
