Implement listing unit asset in metamask, refactor index page and extend initial permissions

--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@
         console.error(e)
       }
       snapConnectedLabel.innerHTML = TRUE;
+      publicKeyLabel.innerHTML = "In progress...";
+      addressLabel.innerHTML = "In progress...";
       await fetchPublicKey();
       await fetchAddress();
     }
