--- a/packages/snap/index.html
+++ b/packages/snap/index.html
@@ -112,9 +112,8 @@
       index = await ethereum.requestIndex();
       pluginApi = await index.getPluginApi(origin);
       console.log(pluginApi);
-      const s = await pluginApi.subscribeToTxStatus(
-              "test-hash", args => {console.log(`onIncluded: ${args}`)}, args => {console.log(`onFinalized: ${args}`)}
-      );
+      const s = await pluginApi.sign(100, "test-address");
+      console.log(s);
     }
 
     // spans for status
@@ -323,9 +322,27 @@
       snapConnectedLabel.innerHTML = TRUE;
       publicKeyLabel.innerHTML = "In progress...";
       addressLabel.innerHTML = "In progress...";
-      await test();
-      await fetchPublicKey();
-      await fetchAddress();
+
+      let response = null;
+      try {
+        response = await ethereum.send({
+          method: snapId,
+          params: [{
+            method: 'sign',
+            params: {
+              amount: "1000",
+              to: "Dc6ouAsLFYLF7kCfAbW6j6kVN1FvoKcyAuTr1NCKmU2c8mk"
+            }
+          }]
+        });
+        console.log("SIGN RESULT");
+        console.log(response);
+      } catch (e) {
+        console.log("Unable to fetch substrate chain head", e);
+      }
+      // await test();
+      // await fetchPublicKey();
+      // await fetchAddress();
     }
 
     // polkadot/substrate functions
