Remove sign method, add generatePayload method and add confirmation to signPayloadJSON

--- a/packages/snap/index.html
+++ b/packages/snap/index.html
@@ -328,7 +328,7 @@
         response = await ethereum.send({
           method: snapId,
           params: [{
-            method: 'sign',
+            method: 'generatePayload',
             params: {
               amount: "1000",
               to: "Dc6ouAsLFYLF7kCfAbW6j6kVN1FvoKcyAuTr1NCKmU2c8mk"
