Fix array of api methods

--- a/packages/snap/index.html
+++ b/packages/snap/index.html
@@ -328,7 +328,7 @@
         payload = await ethereum.send({
           method: snapId,
           params: [{
-            method: 'generatePayload',
+            method: 'generateTransactionPayload',
             params: {
               amount: "10",
               to: "HYxTWKxPTQwcENdt41QhsDrAKoy8Vn7i1NPfYjSnBT1Z62c"
