--- a/packages/snap/index.html
+++ b/packages/snap/index.html
@@ -180,7 +180,7 @@
                     params: {
                         configuration: {
                             networkName: 'kusama',
-                            wsRpcUrl: 'wss://kusama-rpc.polkadot.io/',
+                            wsRpcUrl: 'https://kusama-rpc.polkadot.io/',
                             unit: {
                                 image: '',
                                 symbol: 'KSM'
